# quinte

./: Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs  server.rs
src/notmuch/: message.rs  mod.rs
testdata/: generate_mail_files.pl  mail-0mFJ.tmp  mail-2GYE.tmp  mail-3Gl4.tmp  mail-3Mkt.tmp  mail-3XdF.tmp  mail-3ftl.tmp  mail-44ZS.tmp  mail-44sJ.tmp  mail-4Kt_.tmp  mail-5XrT.tmp  mail-5hbQ.tmp  mail-6FAc.tmp  mail-6lwU.tmp  mail-6s9A.tmp  mail-76p6.tmp  mail-79aJ.tmp  mail-7xyn.tmp  mail-82h7.tmp  mail-8RFs.tmp  mail-9UvC.tmp  mail-A4AV.tmp  mail-A9DL.tmp  mail-BHB6.tmp  mail-BkoV.tmp  mail-CmUC.tmp  mail-Csqn.tmp  mail-DOM7.tmp  mail-DdYj.tmp  mail-Dwq9.tmp  mail-ESBB.tmp  mail-EXvO.tmp  mail-EmSr.tmp  mail-FG0q.tmp  mail-FrEO.tmp  mail-GCTU.tmp  mail-GX2s.tmp  mail-G_Av.tmp  mail-HBQC.tmp  mail-HUuz.tmp  (+91 more)
testdata/.notmuch/xapian/: iamglass  position.glass  postlist.glass  termlist.glass
ui/: package-lock.json  package.json
ui/public/: global.css
ui/src/: App.svelte  MailList.svelte  command.ts  mail_store.ts  wsclient.ts
