[package]
name = "quinte"
version = "0.1.0"
authors = ["Constantin Weißer <i7c@posteo.de>"]
edition = "2018"
links = "notmuch"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.74"
tokio = { version = "0.2.22", features = ["full"] }
tokio-tungstenite = "0.11.0"
log = "0.4.11"
env_logger = "0.7.1"
tungstenite = "0.11.1"
futures-util = "0.3.5"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
thiserror = "1.0.20"

[build-dependencies]
bindgen = "0.54.1"
