[package]
name = "quinte"
version = "0.1.0"
authors = ["Constantin Weißer <i7c@posteo.de>"]
edition = "2018"
links = "notmuch"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.7"
futures-util = "0.3"
libc = "0.2"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
tokio = {version = "0.2", features = ["full"]}
tokio-tungstenite = "0.11"
tungstenite = "0.11"

[build-dependencies]
bindgen = "0.55"
